--- a/WinFormsApp/WinFormsApp/Form/FormDashboard.resx
+++ b/WinFormsApp/WinFormsApp/Form/FormDashboard.resx
@@ -118,6 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonUser.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DQAACw0B7QfALAAAAyhJREFUaEPtmbFOFGEUhSFBUQEr0WgBlvgagFb6DtqIGiN2oPb6BKK+jSYaCxFL
+        tVBBC7VTESyE4Ln3/2adfyGzdzewu8V8yUk2554z/+xmZnZndqCmpqamv9nZ2TkrPZG+SFvSQWNr2FqP
+        pUl2ozO0gQvSL6lX/JRm2Z32UNE++V7ufIG9iQl2K45KdtgUfJSmpcOMDwxbQ5qRPkkFjxjHUcmOw4Jp
+        7K6hNe1NFKxhx1GpfMIe+CffjK2Zlna2sONQdLBCKD4q3ZNeS7/RsnRXGiUWQvkGWHHoOVgtUfSctOal
+        vVmVpoi3JFUSWHHoOViVKHZcspO9FR+kMWqVpHgCKw49B6sSxewQKbDL7xXpFLLX5UvyIrVKyDpYceg5
+        WJUotpLSzlXsBvKupZGzjF0JWQcrDj0HqxLFNlPaGcduIO9kGjkb2JWQdbDi0HOwKlFsI6WdVm9gHbsS
+        sg5WHHoOViWKlQ+hOewG8vr+ELqT0o6dsJelMdR8Ei9Qq4SsgxWHnoNViWJ2GbVLZCv68zJqKDollX+E
+        NWPfE/35RVag+Ihkh9MraR3Z60VphFgI5RtgxaHnYHUdlnew4tBzsLoOyztYceg5WBmyB6Xr0jtpW2oX
+        61h3ThpksxkWKsCKQ8/BypB9I033hV3fGwYzBysOPQcrQ/b7NN0X3rLZDGYOVhx6DlaG7PJhM4QdRp1D
+        qepsY2cwc7Di0HOwMmSXf7wdxQ6jzrFUdTaxM5g5WHHoOVgZst+kqTOPHUad26nqrGBnMHOw4tBzsDJk
+        30pT56+0ILW8+bcMWesU3GScwczBikPPwcqQPSy98MB/7H74vnReOi0dQWfwHkjN98zPpWE2m5HGCaw4
+        9BysXWg0Lj3zUGc8lU6wuV2kSAIrDj0Ha080HpLmpe+WDfJNsk7l1cuTgBVHnbYebFlGuiQtSS+lr9If
+        ZK/NeyhdlKLbK+jowdbn1HV68WhxNi3trGLHUcmezxfYb3zbYLce7toJX76vWGIcR6VJyR5t95ofUvuP
+        1w0V7VPv5ZuwnZ9hdzpDG5iQ7MS063e3/mKytWzNzj75mpqami4xMPAP22pA7ITa4B4AAAAASUVORK5C
+        YII=
+</value>
+  </data>
   <data name="pictureBoxDashboard.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -275,26 +295,6 @@
         6rFaZUYUoWJEY/AMRhShYkRj8AxGFKFiRKYvW3b1WK0yI4pQMaL54Vt29djUnRBFqBhRZUP+L7QgilAx
         osradvUYRSOKUDGiytp29RhFI4pQMaLWtWL0jChCxYiGvYG2H3u9niK72keo7QSp10NOo53/FxpyGm07
         Qer19U+jpYqalhNkZVy7zml0s9lsrmC3+wZfrJaT6Ola8AAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAyhJREFUaEPtmbFOFGEUhSFBUQEr0WgBlvgagFb6DtqIGiN2oPb6BKK+jSYaCxFL
-        tVBBC7VTESyE4Ln3/2adfyGzdzewu8V8yUk2554z/+xmZnZndqCmpqamv9nZ2TkrPZG+SFvSQWNr2FqP
-        pUl2ozO0gQvSL6lX/JRm2Z32UNE++V7ufIG9iQl2K45KdtgUfJSmpcOMDwxbQ5qRPkkFjxjHUcmOw4Jp
-        7K6hNe1NFKxhx1GpfMIe+CffjK2Zlna2sONQdLBCKD4q3ZNeS7/RsnRXGiUWQvkGWHHoOVgtUfSctOal
-        vVmVpoi3JFUSWHHoOViVKHZcspO9FR+kMWqVpHgCKw49B6sSxewQKbDL7xXpFLLX5UvyIrVKyDpYceg5
-        WJUotpLSzlXsBvKupZGzjF0JWQcrDj0HqxLFNlPaGcduIO9kGjkb2JWQdbDi0HOwKlFsI6WdVm9gHbsS
-        sg5WHHoOViWKlQ+hOewG8vr+ELqT0o6dsJelMdR8Ei9Qq4SsgxWHnoNViWJ2GbVLZCv68zJqKDollX+E
-        NWPfE/35RVag+Ihkh9MraR3Z60VphFgI5RtgxaHnYHUdlnew4tBzsLoOyztYceg5WBmyB6Xr0jtpW2oX
-        61h3ThpksxkWKsCKQ8/BypB9I033hV3fGwYzBysOPQcrQ/b7NN0X3rLZDGYOVhx6DlaG7PJhM4QdRp1D
-        qepsY2cwc7Di0HOwMmSXf7wdxQ6jzrFUdTaxM5g5WHHoOVgZst+kqTOPHUad26nqrGBnMHOw4tBzsDJk
-        30pT56+0ILW8+bcMWesU3GScwczBikPPwcqQPSy98MB/7H74vnReOi0dQWfwHkjN98zPpWE2m5HGCaw4
-        9BysXWg0Lj3zUGc8lU6wuV2kSAIrDj0Ha080HpLmpe+WDfJNsk7l1cuTgBVHnbYebFlGuiQtSS+lr9If
-        ZK/NeyhdlKLbK+jowdbn1HV68WhxNi3trGLHUcmezxfYb3zbYLce7toJX76vWGIcR6VJyR5t95ofUvuP
-        1w0V7VPv5ZuwnZ9hdzpDG5iQ7MS063e3/mKytWzNzj75mpqami4xMPAP22pA7ITa4B4AAAAASUVORK5C
-        YII=
 </value>
   </data>
   <data name="buttonLogOut.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
